# XlibShoter

./: CMakeLists.txt  README.md  XlibShoter.h  main.cpp
